--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -924,10 +924,8 @@ Modalit&agrave; rilievo:
 </p><p><span id="Links"></span>
 </p>
 <h3><span class="mw-headline" id="Link">Link</span></h3>
-<div class="mw-translate-fuzzy">
-<p>I commenti nella pagina del forum: <a rel="nofollow" class="external text" href="http://forum.freecadweb.org/viewtopic.php?f=3&amp;t=7384">Extrude from curved surface of cylinder</a>
+<p>I commenti nella pagina del forum: <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=3&amp;t=7384">Extrude from curved surface of cylinder</a>
 </p>
-</div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Draft_Workbench.html" title="Draft Workbench/it">Draft</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
@@ -964,13 +962,13 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116165226
+Cached time: 20260116165256
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.402 seconds
-Real time usage: 0.704 seconds
-Preprocessor visited node count: 1653/1000000
+CPU time usage: 0.387 seconds
+Real time usage: 0.540 seconds
+Preprocessor visited node count: 1652/1000000
 Post&#8208;expand include size: 41051/2097152 bytes
 Template argument size: 12614/2097152 bytes
 Highest expansion depth: 6/100
@@ -980,19 +978,19 @@ Unstrip post&#8208;expand size: 66756/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  356.537      1 -total
-  3.80%   13.541      1 Template:Userdocnavi/it
-  3.55%   12.666      1 Template:Macro/it
-  3.35%   11.958      1 Template:Emphasis
-  3.09%   11.015      1 Template:Draft_Tools_navi/it
-  2.13%    7.586     19 Template:Clear
-  1.98%    7.063      2 Template:Navigation_menu_2
-  1.41%    5.020     10 Template:Code
-  1.19%    4.225      7 Template:RadioButton
-  1.12%    3.996      6 Template:SpinBox
+100.00%  334.005      1 -total
+  3.26%   10.895      1 Template:Draft_Tools_navi/it
+  2.16%    7.219     10 Template:Code
+  1.69%    5.652     10 Template:CheckBox
+  1.38%    4.610      2 Template:Navigation_menu_2
+  1.36%    4.553      7 Template:RadioButton
+  1.36%    4.547      1 Template:Userdocnavi/it
+  1.29%    4.293      6 Template:SpinBox
+  0.98%    3.266      1 Template:Macro/it
+  0.90%    3.010      3 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260116165226 and revision id 1739144. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260116165255 and revision id 1739146. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
