--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -466,12 +466,8 @@ I comandi non utilizzabili con l'opzione scelta sono visualizzati in grigio.
 <p><b>Macro_Circular_Text.FCMacro</b>
 </p><p>o tele carica lo script&nbsp;:
 </p><p>- on github <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/a25e802498bae6959335">Macro_FCCircularText.FCMacro</a>
-</p>
-<div class="mw-translate-fuzzy">
-<p>- o dal forum <a rel="nofollow" class="external text" href="http://forum.freecadweb.org/viewtopic.php?f=3&amp;t=7384&amp;p=87642#p87642">Extrude from curved surface of cylinder</a>
-</p>
-</div>
-<p><span id="Examples"></span>
+</p><p>- o dal forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=3&amp;t=7384&amp;p=87642#p87642">Extrude from curved surface of cylinder</a>
+</p><p><span id="Examples"></span>
 </p>
 <h2><span class="mw-headline" id="Esempi">Esempi</span></h2>
 <center>
@@ -962,13 +958,13 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116165256
+Cached time: 20260116165318
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.387 seconds
-Real time usage: 0.540 seconds
-Preprocessor visited node count: 1652/1000000
+CPU time usage: 0.363 seconds
+Real time usage: 0.444 seconds
+Preprocessor visited node count: 1651/1000000
 Post&#8208;expand include size: 41051/2097152 bytes
 Template argument size: 12614/2097152 bytes
 Highest expansion depth: 6/100
@@ -978,19 +974,19 @@ Unstrip post&#8208;expand size: 66756/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  334.005      1 -total
-  3.26%   10.895      1 Template:Draft_Tools_navi/it
-  2.16%    7.219     10 Template:Code
-  1.69%    5.652     10 Template:CheckBox
-  1.38%    4.610      2 Template:Navigation_menu_2
-  1.36%    4.553      7 Template:RadioButton
-  1.36%    4.547      1 Template:Userdocnavi/it
-  1.29%    4.293      6 Template:SpinBox
-  0.98%    3.266      1 Template:Macro/it
-  0.90%    3.010      3 Template:ColoredText
+100.00%  273.697      1 -total
+  6.16%   16.860      7 Template:RadioButton
+  3.22%    8.811      1 Template:Draft_Tools_navi/it
+  1.73%    4.735      2 Template:Navigation_menu_2
+  1.50%    4.099      3 Template:ColoredText
+  1.39%    3.812      1 Template:Userdocnavi/it
+  1.39%    3.797      1 Template:Macro/it
+  1.27%    3.472     10 Template:Code
+  1.19%    3.244     10 Template:CheckBox
+  0.88%    2.403      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260116165255 and revision id 1739146. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260116165317 and revision id 1739148. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
