--- a/wiki/fr/Arch_Schedule.html
+++ b/wiki/fr/Arch_Schedule.html
@@ -1,20 +1,18 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Arch Schedule/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Arch+Schedule&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--high" title="Arch Liste (91% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--complete" title="Arch Liste (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Arch_Schedule.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Arch Schedule (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--med" title="Arch: Scheda (32% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--high" title="Architektura: Obmiar (91% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--complete" title="Architektura: Obmiar (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--low" title="Cronograma (14% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--low" title="Arch: Schedule (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../ru/Arch_Schedule.html" class="mw-pt-progress mw-pt-progress--med" title="Arch &#1055;&#1083;&#1072;&#1085;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; (27% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Material.html" title="BIM Material/fr">Mat&eacute;riaux</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/fr&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/fr (page does not exist)">Rapport</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Preflight.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Preflight.html" title="BIM Preflight/fr">Contr&ocirc;le en amont</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/BIM_Workbench.html" title="BIM Workbench/fr">Atelier BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
@@ -133,14 +131,12 @@
 <p>Il est possible d'ajouter vos propres propri&eacute;t&eacute;s aux objets. Celles-ci sont appel&eacute;es <a href="../fr/Property_View.html#Menu_contextuel" title="Property View/fr">propri&eacute;t&eacute;s dynamiques</a>. Si elles ont &eacute;t&eacute; ajout&eacute;es avec l'option <b>Prefix group name</b> s&eacute;lectionn&eacute;e, leurs noms commenceront effectivement par le nom du groupe, mais ce pr&eacute;fixe ne sera pas affich&eacute; dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>. Leurs noms ont la forme suivante&nbsp;: <code>NameOfGroup_NameOfProperty</code>. Pour les r&eacute;f&eacute;rencer dans une nomenclature, ce nom complet doit &ecirc;tre utilis&eacute;.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Material.html" title="BIM Material/fr">Mat&eacute;riaux</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/fr&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/fr (page does not exist)">Rapport</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Preflight.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Preflight.html" title="BIM Preflight/fr">Contr&ocirc;le en amont</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/BIM_Workbench.html" title="BIM Workbench/fr">Atelier BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Workbench.html" title="BIM Workbench/fr">BIM</a>
@@ -184,35 +180,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115103747
+Cached time: 20260116191206
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.122 seconds
-Preprocessor visited node count: 1007/1000000
-Post&#8208;expand include size: 32333/2097152 bytes
-Template argument size: 11280/2097152 bytes
+CPU time usage: 0.122 seconds
+Real time usage: 0.290 seconds
+Preprocessor visited node count: 1005/1000000
+Post&#8208;expand include size: 32291/2097152 bytes
+Template argument size: 11252/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1619/5000000 bytes
+Unstrip post&#8208;expand size: 1633/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.287      1 -total
- 31.00%    8.150      1 Template:BIM_Tools_navi/fr
- 22.20%    5.836      2 Template:Navigation_menu_2
- 18.58%    4.884     10 Template:PropertyData
- 11.62%    3.055     10 Template:Variable
- 11.21%    2.948      1 Template:Userdocnavi/fr
-  7.99%    2.099      1 Template:GuiCommand/fr
-  7.36%    1.934      2 Template:Docnav/fr
-  6.63%    1.742     27 Template:Incode
-  4.87%    1.280      9 Template:Button
+100.00%   45.689      1 -total
+ 33.74%   15.417      1 Template:BIM_Tools_navi/fr
+ 25.25%   11.538      2 Template:Navigation_menu_2
+ 22.91%   10.469     10 Template:PropertyData
+ 15.42%    7.045     10 Template:Variable
+  9.93%    4.538      2 Template:Docnav/fr
+  9.77%    4.462      1 Template:Userdocnavi/fr
+  6.73%    3.075      1 Template:GuiCommand/fr
+  3.89%    1.779     27 Template:Incode
+  3.09%    1.412      9 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:65720-0!canonical and timestamp 20260115103747 and revision id 1738652. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:65720-0!canonical and timestamp 20260116191205 and revision id 1739153. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
