--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -56,11 +56,8 @@
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Gestionnaire de calques</p>
 <p>Les calques sont import&eacute;s et export&eacute;s de/vers <a href="../fr/Arch_IFC.html" title="Arch IFC/fr">Arch IFC</a> et <a href="../fr/Draft_DXF.html" title="Draft DXF/fr">Draft DXF/DWG</a>.
+</p><p>Le gestionnaire de calques vous permet de g&eacute;rer vos calques, d'ajouter ou de supprimer des calques ou de modifier leurs propri&eacute;t&eacute;s visuelles. Pour ajouter des objets &agrave; un calque, faites-les simplement glisser dans le calque de l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Pour les supprimer, faites-les glisser du calque et d&eacute;posez-les dans la racine du document.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Le gestionnaire de calques vous permet de g&eacute;rer vos calques, d'ajouter ou de supprimer des calques ou de modifier leurs propri&eacute;t&eacute;s visuelles. Pour ajouter des objets &agrave; un calque, faites-les simplement glisser dans le calque de l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Pour les supprimer, faites-les glisser du calque et d&eacute;posez-les dans la racine du document.
-</p>
-</div>
 <h2><span class="mw-headline" id="NativeIFC">NativeIFC</span></h2>
 <p>Cet outil est exactement le m&ecirc;me que l'outil <a href="../fr/Draft_LayerManager.html" title="Draft LayerManager/fr">Gestionnaire de calques</a> et cr&eacute;e le m&ecirc;me objet de calque. Il n'y a qu'une seule diff&eacute;rence&nbsp;: il prend en charge les objets <a href="../index.php?title=NativeIFC/fr&amp;action=edit&amp;redlink=1.html" class="new" title="NativeIFC/fr (page does not exist)">NativeIFC</a>&nbsp;:
 </p>
@@ -131,13 +128,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116191335
+Cached time: 20260116191340
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 443/1000000
+CPU time usage: 0.080 seconds
+Real time usage: 0.152 seconds
+Preprocessor visited node count: 442/1000000
 Post&#8208;expand include size: 27405/2097152 bytes
 Template argument size: 10395/2097152 bytes
 Highest expansion depth: 6/100
@@ -147,18 +144,18 @@ Unstrip post&#8208;expand size: 1122/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.558      1 -total
- 39.34%   13.203      1 Template:BIM_Tools_navi/fr
- 26.64%    8.941      2 Template:Navigation_menu_2
- 17.32%    5.811      1 Template:GuiCommand/fr
- 15.59%    5.231      1 Template:Userdocnavi/fr
- 10.15%    3.405      2 Template:Docnav/fr
-  6.02%    2.021      1 Template:Caption
-  4.51%    1.515      1 Template:MenuCommand
-  4.44%    1.491      2 Template:Button
+100.00%   59.563      1 -total
+ 29.06%   17.311      1 Template:GuiCommand/fr
+ 22.24%   13.245      2 Template:Button
+ 16.18%    9.638      1 Template:BIM_Tools_navi/fr
+ 13.70%    8.163      1 Template:Caption
+ 10.44%    6.217      2 Template:Navigation_menu_2
+  7.12%    4.242      1 Template:Userdocnavi/fr
+  6.78%    4.039      2 Template:Docnav/fr
+  3.05%    1.815      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191335 and revision id 1739155. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191340 and revision id 1739157. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
