--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -19,12 +19,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="User_interface"></span>
 </p>
 <h2><span class="mw-headline" id="Interface_utilisateur">Interface utilisateur</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_user_interface_improvements">Further user interface improvements</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Core_system_and_API">Core system and API</span></h2>
-</div>
+<p><span id="Further_user_interface_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_l.27interface_utilisateur"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_l'interface_utilisateur">Autres am&eacute;liorations de l'interface utilisateur</span></h3>
+<p><span id="Core_system_and_API"></span>
+</p>
+<h2><span class="mw-headline" id="Noyau_et_API">Noyau et API</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Core">Core</span></h3>
 </div>
@@ -191,12 +191,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201711
+Cached time: 20260116201717
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.059 seconds
+CPU time usage: 0.053 seconds
+Real time usage: 0.074 seconds
 Preprocessor visited node count: 253/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -207,14 +207,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.297      1 -total
- 47.32%    3.453      2 Template:Message
- 27.15%    1.981      1 Template:VeryImportantMessage
- 23.69%    1.729      1 Template:FileName
- 21.91%    1.599      1 Template:TOCright
+100.00%    9.631      1 -total
+ 44.36%    4.272      2 Template:Message
+ 29.27%    2.819      1 Template:VeryImportantMessage
+ 23.04%    2.219      1 Template:TOCright
+ 13.71%    1.321      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201711 and revision id 1739230. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201717 and revision id 1739234. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
