--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -25,9 +25,9 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Core_system_and_API"></span>
 </p>
 <h2><span class="mw-headline" id="Noyau_et_API">Noyau et API</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Core">Core</span></h3>
-</div>
+<p><span id="Core"></span>
+</p>
+<h3><span class="mw-headline" id="Noyau">Noyau</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table cellpadding="5">
 <tbody><tr>
@@ -191,12 +191,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201717
+Cached time: 20260116201720
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.053 seconds
-Real time usage: 0.074 seconds
+CPU time usage: 0.046 seconds
+Real time usage: 0.075 seconds
 Preprocessor visited node count: 253/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -207,14 +207,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.631      1 -total
- 44.36%    4.272      2 Template:Message
- 29.27%    2.819      1 Template:VeryImportantMessage
- 23.04%    2.219      1 Template:TOCright
- 13.71%    1.321      1 Template:FileName
+100.00%   11.005      1 -total
+ 57.62%    6.341      2 Template:Message
+ 37.25%    4.099      1 Template:FileName
+ 21.94%    2.414      1 Template:VeryImportantMessage
+ 17.63%    1.940      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201717 and revision id 1739234. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201720 and revision id 1739236. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
