--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -36,9 +36,9 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/23673">Pull request #23673</a>
 </p>
 </td></tr></tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Further_Core_improvements">Further Core improvements</span></h4>
-</div>
+<p><span id="Further_Core_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_du_noyau"></span><span class="mw-headline" id="Autres_am&eacute;liorations_du_noyau">Autres am&eacute;liorations du noyau</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>The search bar in the <span typeof="mw:File"><a href="../index.php?title=Std_DlgPreferences.svg&amp;filetimestamp=20240528092445&amp;.html" class="mw-file-description"><img src="../File/Std_DlgPreferences.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_DlgPreferences.html" title="Std DlgPreferences">Preferences</a> is now able to search through tooltips, dropdown values, checkboxes and group titles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24283">Pull request #24283</a></li>
 <li>The <span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameter instead or radius. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li></ul>
@@ -189,12 +189,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201745
+Cached time: 20260116201756
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.063 seconds
+CPU time usage: 0.046 seconds
+Real time usage: 0.131 seconds
 Preprocessor visited node count: 252/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -205,14 +205,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.668      1 -total
- 48.29%    2.737      2 Template:Message
- 29.08%    1.648      1 Template:VeryImportantMessage
- 19.60%    1.111      1 Template:FileName
- 18.66%    1.058      1 Template:TOCright
+100.00%   14.227      1 -total
+ 49.45%    7.035      1 Template:VeryImportantMessage
+ 41.96%    5.969      2 Template:Message
+  7.55%    1.074      1 Template:FileName
+  6.66%    0.947      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201745 and revision id 1739238. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201756 and revision id 1739240. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
