--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -39,16 +39,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_Core_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_du_noyau"></span><span class="mw-headline" id="Autres_am&eacute;liorations_du_noyau">Autres am&eacute;liorations du noyau</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The search bar in the <span typeof="mw:File"><a href="../index.php?title=Std_DlgPreferences.svg&amp;filetimestamp=20240528092445&amp;.html" class="mw-file-description"><img src="../File/Std_DlgPreferences.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_DlgPreferences.html" title="Std DlgPreferences">Preferences</a> is now able to search through tooltips, dropdown values, checkboxes and group titles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24283">Pull request #24283</a></li>
-<li>The <span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameter instead or radius. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li></ul>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<ul><li>La barre de recherche dans les <span typeof="mw:File"><a href="../index.php?title=Std_DlgPreferences.svg&amp;filetimestamp=20240528092445&amp;.html" class="mw-file-description"><img src="../File/Std_DlgPreferences.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_DlgPreferences.html" title="Std DlgPreferences/fr">pr&eacute;f&eacute;rences</a> permet d&eacute;sormais d'effectuer des recherches dans les infobulles, les valeurs des menus d&eacute;roulants, les cases &agrave; cocher et les titres de groupe. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24283">Pull request #24283</a></li>
+<li>L'outil <span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Std_Measure.html" title="Std Measure/fr">Mesurer</a> offre d&eacute;sormais la possibilit&eacute; d'afficher le r&eacute;sultat mesur&eacute; des &eacute;l&eacute;ments circulaires sous forme de diam&egrave;tre plut&ocirc;t que de rayon. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li></ul>
 <h3><span class="mw-headline" id="API">API</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Removed_Python_API">Removed Python API</span></h4>
-</div>
+<p><span id="Removed_Python_API"></span>
+</p>
+<h4><span id="Suppression_d.27API_Python"></span><span class="mw-headline" id="Suppression_d'API_Python">Suppression d'API Python</span></h4>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Changed_Python_API">Changed Python API</span></h4>
 </div>
@@ -189,13 +185,13 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201756
+Cached time: 20260116201905
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.131 seconds
-Preprocessor visited node count: 252/1000000
+CPU time usage: 0.052 seconds
+Real time usage: 0.090 seconds
+Preprocessor visited node count: 250/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
@@ -205,14 +201,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.227      1 -total
- 49.45%    7.035      1 Template:VeryImportantMessage
- 41.96%    5.969      2 Template:Message
-  7.55%    1.074      1 Template:FileName
-  6.66%    0.947      1 Template:TOCright
+100.00%   11.641      1 -total
+ 62.16%    7.236      2 Template:Message
+ 28.71%    3.342      1 Template:FileName
+ 21.07%    2.453      1 Template:VeryImportantMessage
+ 11.35%    1.321      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201756 and revision id 1739240. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201904 and revision id 1739246. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
