--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -52,12 +52,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </p>
 <h4><span class="mw-headline" id="Nouvelles_API_en_Python">Nouvelles API en Python</span></h4>
 <h2><span class="mw-headline" id="Start">Start</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Addon_Manager">Addon Manager</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Assembly_Workbench">Assembly Workbench</span></h2>
-</div>
+<p><span id="Addon_Manager"></span>
+</p>
+<h2><span class="mw-headline" id="Gestionnaire_des_extensions">Gestionnaire des extensions</span></h2>
+<p><span id="Assembly_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Assembly">Atelier Assembly</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Assembly_improvements">Further Assembly improvements</span></h3>
 </div>
@@ -183,12 +183,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201918
+Cached time: 20260116201924
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.057 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.097 seconds
 Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -199,14 +199,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.647      1 -total
- 49.57%    2.799      2 Template:Message
- 25.64%    1.448      1 Template:VeryImportantMessage
- 20.35%    1.149      1 Template:TOCright
- 18.73%    1.058      1 Template:FileName
+100.00%    5.717      1 -total
+ 60.96%    3.485      2 Template:Message
+ 29.11%    1.664      1 Template:FileName
+ 17.02%    0.973      1 Template:VeryImportantMessage
+ 16.11%    0.921      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201918 and revision id 1739252. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201924 and revision id 1739256. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
